# Flacdecode

./: .gitignore  CMakeLists.txt  README.md  decodeflac.cpp
BitInput/: bitinput.cpp  bitinput.hpp
Bloc/: bloc.cpp  bloc.hpp
Bloc/Image/: image.cpp  image.hpp
Bloc/Metadata/: metadata.cpp  metadata.hpp
Bloc/Padding/: padding.cpp  padding.hpp
Bloc/Vorbis/: vorbis.cpp  vorbis.hpp
Frame/: frame.cpp  frame.hpp
Utils/: utils.hpp
